style: fix destination header to always be visible at top

--- a/src/index.css
+++ b/src/index.css
@@ -370,7 +370,7 @@ p {
 }
 
 .destination-header {
-  position: sticky;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
